<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/appheader"
        android:layout_weight="1"
        android:contentDescription="@string/app_header"/>

    <FrameLayout
        android:id="@+id/rootContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/announcement_button"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/announcementblack"
            android:contentDescription="@string/announcement_button"/>

        <ImageButton
            android:id="@+id/generalinfo_button"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/generalinformation"
            android:contentDescription="@string/general_information_button"/>

        <ImageButton
            android:id="@+id/lecturerinfo_button"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/lecturer"
            android:contentDescription="@string/lecturer_information_button"/>

        <ImageButton
            android:id="@+id/timetable_button"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/timetable"
            android:contentDescription="@string/time_table_button"/>

        <ImageButton
            android:id="@+id/forum_button"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/forum"
            android:contentDescription="@string/forum_button"/>

        <ImageButton
            android:id="@+id/my_profile_button"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/my_account"
            android:contentDescription="@string/my_profile_button"/>

    </LinearLayout>

</LinearLayout>
